objects/AlumniCommunityPersonalization__c.object
<CustomObject><fields>
        <fullName>Content_Personalization_Field_1__c</fullName>
        <description>API Name of the field on the CC Community Content object that will be used first to find personalized results</description>
        <inlineHelpText>API Name of the field on the CC Community Content object that will be used first to find personalized results</inlineHelpText>
        <label>Content Personalization Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Content_Personalization_Field_2__c</fullName>
        <description>API Name of the field on the CC Community Content object that will be used second to find personalized results</description>
        <inlineHelpText>API Name of the field on the CC Community Content object that will be used second to find personalized results</inlineHelpText>
        <label>Content Personalization Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Content_Personalization_Field_3__c</fullName>
        <description>API Name of the field on the CC Community Content object that will be used third to find personalized results</description>
        <inlineHelpText>API Name of the field on the CC Community Content object that will be used third to find personalized results</inlineHelpText>
        <label>Content Personalization Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Content_Type_Home_Page_Tile_1__c</fullName>
        <description>API Name of the CC Community Content Record Type that should be displayed in tile 1 on the Home Page</description>
        <inlineHelpText>API Name of the CC Community Content Record Type that should be displayed in tile 1 on the Home Page</inlineHelpText>
        <label>Content Type Home Page Tile 1</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Content_Type_Home_Page_Tile_2__c</fullName>
        <description>API Name of the CC Community Content Record Type that should be displayed in tile 2 on the Home Page</description>
        <inlineHelpText>API Name of the CC Community Content Record Type that should be displayed in tile 2 on the Home Page</inlineHelpText>
        <label>Content Type Home Page Tile 2</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Content_Type_Home_Page_Tile_3__c</fullName>
        <description>API Name of the CC Community Content Record Type that should be displayed in tile 3 on the Home Page</description>
        <inlineHelpText>API Name of the CC Community Content Record Type that should be displayed in tile 3 on the Home Page</inlineHelpText>
        <label>Content Type Home Page Tile 3</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>User_Personalization_Field_1__c</fullName>
        <description>API Name of the field on the Contact object that will be used first to find personalized results</description>
        <inlineHelpText>API Name of the field on the Contact object that will be used first to find personalized results</inlineHelpText>
        <label>User Personalization Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>User_Personalization_Field_2__c</fullName>
        <description>API Name of the field on the Contact object that will be used second to find personalized results</description>
        <inlineHelpText>API Name of the field on the Contact object that will be used second to find personalized results</inlineHelpText>
        <label>User Personalization Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>User_Personalization_Field_3__c</fullName>
        <description>API Name of the field on the Contact object that will be used third to find personalized results</description>
        <inlineHelpText>API Name of the field on the Contact object that will be used third to find personalized results</inlineHelpText>
        <label>User Personalization Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields><customSettingsType>List</customSettingsType><description>Used for the personalization of content in the Alumni Community</description><enableFeeds>false</enableFeeds><label>Alumni Community Personalization</label><visibility>Public</visibility></CustomObject>